--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
+    "redux": "^4.0.4",
     "request": "^2.88.0"
   },
   "devDependencies": {
